Manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  namespace: application
  labels:
    app: back-pod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back-pod
  template:
    metadata:
      labels:
        app: back-pod
    spec:
      containers:
      - name: back-pod
        image: bahlish/film-match:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 60
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
