Manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: application
spec:
  type: NodePort
  selector:
    app: back-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
