Manifests/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: back
spec:
  ingressClassName: nginx
  rules:
    - host: api.film.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 80
